--- a/web-scraper/vanilla-challenge/package.json
+++ b/web-scraper/vanilla-challenge/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "puppeteer": "^5.5.0"
+    "puppeteer": "^5.5.0",
+    "uuid": "^8.3.2"
   }
 }
