--- a/web-scraper/react-challenge/package.json
+++ b/web-scraper/react-challenge/package.json
@@ -12,9 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@azure/storage-blob": "^12.4.0",
+    "azure-storage": "^2.10.3",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "puppeteer": "^5.5.0",
     "react-bootstrap": "^1.4.3",
