--- a/web-scraper/vanilla-challenge/package.json
+++ b/web-scraper/vanilla-challenge/package.json
@@ -9,7 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@azure/storage-blob": "^12.4.0",
+    "dotenv": "^8.2.0",
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "into-stream": "^6.0.0",
+    "multer": "^1.4.2",
     "puppeteer": "^5.5.0",
     "uuid": "^8.3.2"
   }
